fixing spacing and layout and getting affinity diagram image up

--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,60 @@
-body{
+body {
     background: #f4f4f4;
     font-family: Arial, Helvetica, sans-serif;
     margin: 18px;
 }
 
-p{
+p {
     color: #2e2e2e;
-    font: 14px 'Arial', sans-serif;
+    font-size: 16px;
+    line-height: 1.4;
 }
-h1{
+
+h1 {
     color: #2e2e2e;
     text-align: center;
-    accent-color: #4a90e2;
-    font: bold 36px 'Arial', sans-serif;
+    font-size: 36px;
+    font-weight: bold;
 }
-h2{
-    color:#6e4f32;
-    font: bold 24px 'Arial', sans-serif;
+
+h2 {
+    color: #6e4f32;
+    font-size: 26px;
+    font-weight: bold;
+}
+
+.projects {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+
+.project {
+    width: 300px;
+    padding: 20px 10px;
+    background: white;
+    border-radius: 12px;
+    text-align: center;
+}
+
+.project h3 {
+    font-size: 22px;
+    margin-bottom: 10px;
+    color: #2e2e2e;
+    font-weight: bold;
+}
+
+.project p {
+    font-size: 18px;
+    color: #3a3a3a;
+}
+
+.project img {
+    width: 100%;
+    max-width: 250px;
+    height: auto;
+    display: block;
+    margin: 12px auto;
+    border-radius: 10px;
 }
